--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
